--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,17 +6,31 @@
     <div class="panel-body">
         <% @messages.each do |message| %>
         <span class="label label-info"><%= message.name %></span>
-        <%= message.body %>
+        <%= message.body  %>
         <br>
         <% end %>
     </div>
 </div>
 
-<%= form_for(Message.new) do |f| %>
-  名前:
-  <%= f.text_field :name %>
 
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit %>
+<%= form_for(Message.new) do |f| %>
+<form>
+    <div class="form-group">
+        <label for="Name">名前</label>
+        <br>
+        <%= f.text_field :name , :placeholder => "例)久田直治郎" %>
+    </div>
+
+    <div class="form-group">
+        <label for="Content">内容</label>
+        <br>
+        <%= f.text_area :body , :rows => "4行",:cols =>"25", :placeholder => "100字以内" , :maxlength => "100"  %>
+    </div>
+    <%= f.submit %>
+</form>
+
+  
+  
+  
+  
 <% end %>
