--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -14,6 +14,18 @@
 
 
 <%= form_for(Message.new) do |f| %>
+    <% if @message.errors.present? %>
+        <div class="alert alert-danger">
+            <%= alert %>
+            <ul>
+                <% @message.errors.full_messages.each do |full_message| %>
+                    <li>
+                        <%= full_message %>
+                    </li>
+            <% end %>
+            </ul>
+        </div>
+    <% end %>
 <form>
     <div class="form-group">
         <label for="Name">名前</label>
@@ -24,7 +36,7 @@
     <div class="form-group">
         <label for="Content">内容</label>
         <br>
-        <%= f.text_area :body , :rows => "4行",:cols =>"25", :placeholder => "100字以内" , :maxlength => "100"  %>
+        <%= f.text_area :body , :rows => "4行",:cols =>"25", :placeholder => "30字以内" , :maxlength => "30"  %>
     </div>
     <%= f.submit %>
 </form>
