--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,6 +7,7 @@
         <% @messages.each do |message| %>
         <span class="label label-info"><%= message.name %></span>
         <%= message.body  %>
+        (<%= link_to "edit" , edit_message_path(message) %>)
         <br>
         <% end %>
     </div>
@@ -14,3 +15,4 @@
 
 <% #部分テンプレートを読み込んでいる %>
 <%= render 'form' %> 
+
