--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,10 +12,25 @@
         </div>
     <% end %>
     
-    名前:
-    <%= f.text_field :name %>
+<form>
+    <div class="form-group">
+        <label for="Name">名前</label>
+        <br>
+        <%= f.text_field :name , :placeholder => "例)久田直治郎" %>
+    </div>
     
-    内容:
-    <%= f.text_field :body %>
+    <div class="form-group">
+        <label for="Age">年齢</label>
+        <br>
+        <%= f.text_field :age , :placeholder => "例)21" %>
+    </div>
+
+    <div class="form-group">
+        <label for="Content">内容</label>
+        <br>
+        <%= f.text_area :body , :rows => "2",:cols =>"19", :placeholder => "20字以内" , :maxlength => "20"  %>
+    </div>
     <%= f.submit class: "btn btn-sm btn-primary" %>
+</form>
+    
 <% end %>
